--- a/Views/NotasDeVendas/Create.cshtml
+++ b/Views/NotasDeVendas/Create.cshtml
@@ -14,13 +14,18 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Data" class="control-label"></label>
-                <input asp-for="Data" class="form-control" />
+                <input asp-for="Data" class="form-control" type="date" asp-format="{0:yyyy-MM-dd}"/>
                 <span asp-validation-for="Data" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Tipo" /> @Html.DisplayNameFor(model => model.Tipo)
-                </label>
+            <div class="form-group">
+                <label asp-for="Status" class="control-label"></label>
+                <select asp-for="Status" class="form-control">
+                    @foreach (var status in Enum.GetValues(typeof(StatusNotaDeVenda)))
+                    {
+                        <option value="@status">@((StatusNotaDeVenda)status)</option>
+                    }
+                </select>
+                <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ClienteId" class="control-label"></label>
@@ -35,12 +40,8 @@
                 <select asp-for="TransportadoraId" class ="form-control" asp-items="ViewBag.TransportadoraId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="PagamentoComChequeId" class="control-label"></label>
-                <select asp-for="PagamentoComChequeId" class ="form-control" asp-items="ViewBag.PagamentoComChequeId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="PagamentoComCartaoId" class="control-label"></label>
-                <select asp-for="PagamentoComCartaoId" class ="form-control" asp-items="ViewBag.PagamentoComCartaoId"></select>
+                <label asp-for="TipoDePagamentoId" class="control-label"></label>
+                <select asp-for="TipoDePagamentoId" class ="form-control" asp-items="ViewBag.TipoDePagamentoId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
