--- a/Views/NotasDeVendas/Delete.cshtml
+++ b/Views/NotasDeVendas/Delete.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.Data)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Tipo)
+            @Html.DisplayNameFor(model => model.Status)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Tipo)
+            @Html.DisplayFor(model => model.Status)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Cliente)
@@ -42,16 +42,10 @@
             @Html.DisplayFor(model => model.Transportadora.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PagamentoComCheque)
+            @Html.DisplayNameFor(model => model.TipoDePagamento)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PagamentoComCheque.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PagamentoComCartao)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PagamentoComCartao.Id)
+            @Html.DisplayFor(model => model.TipoDePagamento.Id)
         </dd>
     </dl>
     
