--- a/Views/NotasDeVendas/Edit.cshtml
+++ b/Views/NotasDeVendas/Edit.cshtml
@@ -15,13 +15,18 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Data" class="control-label"></label>
-                <input asp-for="Data" class="form-control" />
+                <input asp-for="Data" class="form-control" type="date" asp-format="{0:yyyy-MM-dd}"/>
                 <span asp-validation-for="Data" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Tipo" /> @Html.DisplayNameFor(model => model.Tipo)
-                </label>
+            <div class="form-group">
+                <label asp-for="Status" class="control-label"></label>
+                <select asp-for="Status" class="form-control">
+                    @foreach (var status in Enum.GetValues(typeof(StatusNotaDeVenda)))
+                    {
+                        <option value="@status">@((StatusNotaDeVenda)status)</option>
+                    }
+                </select>
+                <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ClienteId" class="control-label"></label>
@@ -39,14 +44,13 @@
                 <span asp-validation-for="TransportadoraId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PagamentoComChequeId" class="control-label"></label>
-                <select asp-for="PagamentoComChequeId" class="form-control" asp-items="ViewBag.PagamentoComChequeId"></select>
-                <span asp-validation-for="PagamentoComChequeId" class="text-danger"></span>
+                <label asp-for="TipoDePagamentoId" class="control-label"></label>
+                <select asp-for="TipoDePagamentoId" class="form-control" asp-items="ViewBag.TipoDePagamentoId"></select>
+                <span asp-validation-for="TipoDePagamentoId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="PagamentoComCartaoId" class="control-label"></label>
-                <select asp-for="PagamentoComCartaoId" class="form-control" asp-items="ViewBag.PagamentoComCartaoId"></select>
-                <span asp-validation-for="PagamentoComCartaoId" class="text-danger"></span>
+            <div>
+                <a asp-action="CancelarNota" asp-route-id="@Model.Id">Cancelar Nota</a>
+                <a asp-action="DevolverNota" asp-route-id="@Model.Id">Devolver Nota</a>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
