--- a/Views/NotasDeVendas/Index.cshtml
+++ b/Views/NotasDeVendas/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.Data)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Tipo)
+                @Html.DisplayNameFor(model => model.Status)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Cliente)
@@ -28,10 +28,7 @@
                 @Html.DisplayNameFor(model => model.Transportadora)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PagamentoComCheque)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PagamentoComCartao)
+                @Html.DisplayNameFor(model => model.TipoDePagamento)
             </th>
             <th></th>
         </tr>
@@ -43,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.Data)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Tipo)
+                @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Cliente.Id)
@@ -55,10 +52,7 @@
                 @Html.DisplayFor(modelItem => item.Transportadora.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PagamentoComCheque.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PagamentoComCartao.Id)
+                @Html.DisplayFor(modelItem => item.TipoDePagamento.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
