--- a/Views/Pagamentos/Create.cshtml
+++ b/Views/Pagamentos/Create.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="DataLimite" class="control-label"></label>
-                <input asp-for="DataLimite" class="form-control" />
+                <input asp-for="DataLimite" class="form-control" type="date" asp-format="{0:yyyy-MM-dd}"/>
                 <span asp-validation-for="DataLimite" class="text-danger"></span>
             </div>
             <div class="form-group">
