--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
                            <a class="nav-link text-dark" asp-area="" asp-controller="Pagamentos" asp-action="Index">Pagamentos</a>
                         </li>
                         <li class="nav-item">
+                           <a class="nav-link text-dark" asp-area="" asp-controller="TiposDePagamento" asp-action="Index">Tipos de Pagamento</a>
+                        </li>
+                        <li class="nav-item">
                            <a class="nav-link text-dark" asp-area="" asp-controller="PagamentosComCheque" asp-action="Index">Pagamentos com Cheque</a>
                         </li>
                         <li class="nav-item">
