--- a/Views/TiposDePagamento/Delete.cshtml
+++ b/Views/TiposDePagamento/Delete.cshtml
@@ -1,21 +1,16 @@
-@model EbertIan.Models.PagamentoComCheque
+@model EbertIan.Models.TipoDePagamento
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>PagamentoComCheque</h4>
+    <h4>TipoDePagamento</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NomeDoBanco)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NomeDoBanco)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.NomeDoCobrado)
         </dt>
@@ -29,8 +24,10 @@
             @Html.DisplayFor(model => model.InformacoesAdicionais)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
