--- a/Views/TiposDePagamento/Edit.cshtml
+++ b/Views/TiposDePagamento/Edit.cshtml
@@ -1,22 +1,18 @@
-@model EbertIan.Models.PagamentoComCheque
+@model EbertIan.Models.TipoDePagamento
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
-<h4>PagamentoComCheque</h4>
+<h4>TipoDePagamento</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="NomeDoBanco" class="control-label"></label>
-                <input asp-for="NomeDoBanco" class="form-control" />
-                <span asp-validation-for="NomeDoBanco" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="NomeDoCobrado" class="control-label"></label>
                 <input asp-for="NomeDoCobrado" class="form-control" />
@@ -28,7 +24,7 @@
                 <span asp-validation-for="InformacoesAdicionais" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
